tests/compile-test-no-args.rs
use autovec::autovec;
#[autovec]
fn add() -> String {
    "hello world".to_string()
}

fn main() {
}
